--- a/MyOOP/src/main/resources/application.properties
+++ b/MyOOP/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=MyOOPProject
 spring.datasource.username=sa
 spring.datasource.password=123456
 
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update 
+spring.jpa.show-sql=true 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServer2008Dialect
 spring.jpa.properties.hibernate.format_sql=true
 
@@ -19,3 +19,18 @@ spring.mvc.view.suffix=.jsp
 spring.servlet.multipart.max-file-size=128KB
 spring.servlet.multipart.max-request-size=128KB
 spring.servlet.multipart.enabled=true
+
+#mail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=team28.oop@gmail.com
+spring.mail.password=oopproject
+
+# Other properties
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+# TLS , port 587
+spring.mail.properties.mail.smtp.starttls.enable=true
